--- a/images/1/1.md
+++ b/images/1/1.md
@@ -2,13 +2,12 @@
 |---|------|---|---|---|---|---|---|---|---|---|---|---|---|
 |합정|테스트1|8000/28|11분|36분|37분|11평|3룸+거실|3층(엘베x)|Normal|X|X|O|오래된건물이라 외관 및 계단 허름|
 
-![ss](./KakaoTalk_20200822_183517018_02.jpg)
-![ss](./KakaoTalk_20200822_183517018_03%20(1).jpg)
-![ss](./KakaoTalk_20200822_183517018_04%20(1).jpg)
-![ss](./KakaoTalk_20200822_183517018_05.jpg)
-![ss](./KakaoTalk_20200822_183517018_06.jpg)
-![ss](./KakaoTalk_20200822_183517018_07.jpg)
-![ss](./KakaoTalk_20200822_183517018_08.jpg)
-![ss](./KakaoTalk_20200822_183517018_09.jpg)
-![ss](./KakaoTalk_20200822_183517018_10.jpg)
+<img src="./KakaoTalk_20200822_183517018_03%20(1).jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_04%20(1).jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_05.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_06.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_07.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_08.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_09.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_10.jpg" width="500" height="300"></img>
 
