--- a/images/3/3.md
+++ b/images/3/3.md
@@ -2,13 +2,13 @@
 |---|------|---|---|---|---|---|---|---|---|---|---|---|---|
 |홍대|테스트1|1억/43|6분|29분|22분|11평|2룸+거실|3층(엘베x)|NotGood|O|X|O|10월초 입주, 도배+씽크대(상하부)교체, 동네조용|
 
-![ss](./KakaoTalk_20200822_183646538_03.jpg)
-![ss](./KakaoTalk_20200822_183646538_04.jpg)
-![ss](./KakaoTalk_20200822_183646538_05.jpg)
-![ss](./KakaoTalk_20200822_183646538_06.jpg)
-![ss](./KakaoTalk_20200822_183646538_07.jpg)
-![ss](./KakaoTalk_20200822_183646538_08.jpg)
-![ss](./KakaoTalk_20200822_183646538_09.jpg)
-![ss](./KakaoTalk_20200822_183646538_10.jpg)
-![ss](./KakaoTalk_20200822_183646538_11.jpg)
+<img src="./KakaoTalk_20200822_183646538_03.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_04.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_05.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_06.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_07.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_08.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_09.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_10.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_11.jpg" width="500" height="300"></img>
 
