--- a/images/4/4.md
+++ b/images/4/4.md
@@ -2,12 +2,12 @@
 |---|------|---|---|---|---|---|---|---|---|---|---|---|---|
 |당산|테스트1|1.2억/45|13분|35분|38분|8평|1.5룸|3층|작음|X|O|O|역이랑 도보로 좀 멈, 조용, 거의신축, 구조 괜찮, 주차시설 좋음, 화장실 작은게 좀 흠|
 
-![ss](./KakaoTalk_20200822_183517018.jpg)
-![ss](./KakaoTalk_20200822_183517018_01%20(1).jpg)
-![ss](./KakaoTalk_20200822_202547671.jpg)
-![ss](./KakaoTalk_20200822_202547671_01.jpg)
-![ss](./KakaoTalk_20200822_202547671_02.jpg)
-![ss](./KakaoTalk_20200822_202547671_03.jpg)
-![ss](./KakaoTalk_20200822_202547671_04.jpg)
-![ss](./KakaoTalk_20200822_202547671_05.jpg)
 
+<img src="./KakaoTalk_20200822_183517018.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_01%20(1).jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_202547671.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_202547671_01.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_202547671_02.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_202547671_03.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_202547671_04.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_202547671_05.jpg" width="500" height="300"></img>
