--- a/images/5/5.md
+++ b/images/5/5.md
@@ -2,18 +2,20 @@
 |---|------|---|---|---|---|---|---|---|---|---|---|---|---|
 |영등포시장|테스트1|1억/40|9분|32분|33분|8평|1룸|5층|Normal|X|O|O|위치 애매, 주변상권 조금약함, 주방에 안쪽으로 조금 들어가 있음(창문있어 환기 괜찮을듯)|
 
-![ss](./KakaoTalk_20200822_183517018_16.jpg)
-![ss](./KakaoTalk_20200822_183517018_17.jpg)
-![ss](./KakaoTalk_20200822_183517018_18.jpg)
-![ss](./KakaoTalk_20200822_183517018_19.jpg)
-![ss](./KakaoTalk_20200822_183517018_20.jpg)
-![ss](./KakaoTalk_20200822_183517018_21.jpg)
-![ss](./KakaoTalk_20200822_183646538_12.jpg)
-![ss](./KakaoTalk_20200822_183646538_13.jpg)
-![ss](./KakaoTalk_20200822_183646538_14.jpg)
-![ss](./KakaoTalk_20200822_183646538_15.jpg)
-![ss](./KakaoTalk_20200822_183646538_16.jpg)
-![ss](./KakaoTalk_20200822_183646538_17.jpg)
-![ss](./KakaoTalk_20200822_183646538_18.jpg)
-![ss](./KakaoTalk_20200822_183646538_19.jpg)
+
+<img src="./KakaoTalk_20200822_183517018_16.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_17.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_18.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_19.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_20.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_21.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_12.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_13.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_14.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_15.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_16.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_17.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_18.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_19.jpg" width="500" height="300"></img>
+
 
