--- a/images/6/6.md
+++ b/images/6/6.md
@@ -2,13 +2,11 @@
 |---|------|---|---|---|---|---|---|---|---|---|---|---|---|
 |영등포시장|테스트1|1억/70|5분|27분|33분|7.5평|1.5룸|9층|Good|O|O|O|뷰맛집, 가성비는 떯어지, 바로앞 아크로타워 상권이용, Flex용, 로비넓음, 완전신축|
 
-![ss](./KakaoTalk_20200822_183646538_20.jpg)
-![ss](./KakaoTalk_20200822_183646538_21.jpg)
-![ss](./KakaoTalk_20200822_183646538_22.jpg)
-![ss](./KakaoTalk_20200822_183646538_23.jpg)
-![ss](./KakaoTalk_20200822_183646538_24.jpg)
-![ss](./KakaoTalk_20200822_183646538_25.jpg)
-![ss](./KakaoTalk_20200822_183646538_26.jpg)
-![ss](./KakaoTalk_20200822_183646538_27.jpg)
-
-
+<img src="./KakaoTalk_20200822_183646538_20.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_21.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_22.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_23.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_24.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_25.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_26.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_27.jpg" width="500" height="300"></img>
