--- a/images/2/2.md
+++ b/images/2/2.md
@@ -2,18 +2,18 @@
 |---|------|---|---|---|---|---|---|---|---|---|---|---|---|
 |합정|테스트1|2000/60|4분|29분|25분|8평|1.5룸(+배란다)|3층(엘베x)|Normal|O|O|X|야외 테라스(?)같은 공간 있지만 실효성은 X|
 
-![ss](./KakaoTalk_20200822_183517018_13.jpg)
-![ss](./KakaoTalk_20200822_183517018_14.jpg)
-![ss](./KakaoTalk_20200822_183517018_15.jpg)
-![ss](./KakaoTalk_20200822_183517018_22.jpg)
-![ss](./KakaoTalk_20200822_183517018_23.jpg)
-![ss](./KakaoTalk_20200822_183517018_24.jpg)
-![ss](./KakaoTalk_20200822_183517018_25.jpg)
-![ss](./KakaoTalk_20200822_183517018_26.jpg)
-![ss](./KakaoTalk_20200822_183517018_27.jpg)
-![ss](./KakaoTalk_20200822_183517018_28.jpg)
-![ss](./KakaoTalk_20200822_183517018_29.jpg)
-![ss](./KakaoTalk_20200822_183646538.jpg)
-![ss](./KakaoTalk_20200822_183646538_01.jpg)
-![ss](./KakaoTalk_20200822_183646538_02.jpg)
+<img src="./KakaoTalk_20200822_183517018_13.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_14.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_15.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_22.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_23.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_24.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_25.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_26.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_27.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_28.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183517018_29.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_01.jpg" width="500" height="300"></img>
+<img src="./KakaoTalk_20200822_183646538_02.jpg" width="500" height="300"></img>
 
